[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resources/MainMenu/Frame 4.png" type="Texture" id=1]
[ext_resource path="res://Help.gd" type="Script" id=2]
[ext_resource path="res://Resources/help/Keyboard-and-Mouse.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Resources/Fonts/JuliusSansOne-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = SubResource( 12 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fonts/JuliusSansOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 70
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Resources/Fonts/JuliusSansOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 142, 288, 48, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 142, 304, 48, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "A",
"speed": 1.5
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "D",
"speed": 1.5
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Space",
"speed": 1.5
} ]

[node name="help" type="Node2D"]
script = ExtResource( 2 )

[node name="Frame4" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="next" type="Button" parent="."]
margin_left = 784.0
margin_top = 512.0
margin_right = 1008.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
text = "next page"
flat = true

[node name="nextline" type="Line2D" parent="next"]
visible = false
position = Vector2( 6, 56 )
scale = Vector2( 1.66362, 0.1 )
points = PoolVector2Array( 0, 64, 77.5897, 64, 128, 64 )
default_color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 192.0
margin_top = 32.0
margin_right = 832.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "help"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 368.0
margin_top = 179.0
margin_right = 944.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "direction left/right"

[node name="Label3" type="Label" parent="."]
margin_left = 368.0
margin_top = 240.0
margin_right = 944.0
margin_bottom = 285.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "jump/double jump"

[node name="Label4" type="Label" parent="."]
margin_left = 368.0
margin_top = 304.0
margin_right = 944.0
margin_bottom = 349.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "shoot"

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -12.0269, 92.4 )
scale = Vector2( 1.02349, 0.1 )
points = PoolVector2Array( 224, 96, 800, 96, 512, 96 )
default_color = Color( 0, 0, 0, 1 )

[node name="A" type="AnimatedSprite" parent="."]
position = Vector2( 152, 200 )
scale = Vector2( 3, 3 )
frames = SubResource( 11 )
animation = "A"
playing = true

[node name="D" type="AnimatedSprite" parent="."]
position = Vector2( 232, 200 )
scale = Vector2( 3, 3 )
frames = SubResource( 11 )
animation = "D"
playing = true

[node name="D2" type="AnimatedSprite" parent="."]
position = Vector2( 190, 264 )
scale = Vector2( 2.875, 3 )
frames = SubResource( 11 )
animation = "Space"
playing = true

[node name="D3" type="AnimatedSprite" parent="."]
position = Vector2( 190, 336 )
scale = Vector2( 2.875, 3 )
frames = SubResource( 11 )
animation = "Space"
playing = true

[node name="Menu" type="Button" parent="."]
margin_left = 16.0
margin_top = 512.0
margin_right = 240.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
text = "menu"
flat = true

[node name="Menuline" type="Line2D" parent="Menu"]
visible = false
position = Vector2( 43.6909, 56 )
scale = Vector2( 1.0747, 0.1 )
points = PoolVector2Array( 0, 64, 77.5897, 64, 128, 64 )
default_color = Color( 1, 1, 1, 1 )

[connection signal="mouse_entered" from="next" to="." method="_on_next_mouse_entered"]
[connection signal="mouse_exited" from="next" to="." method="_on_next_mouse_exited"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="mouse_entered" from="Menu" to="." method="_on_Menu_mouse_entered"]
[connection signal="mouse_exited" from="Menu" to="." method="_on_Menu_mouse_exited"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
